[iOS] fast/events/touch/ios/hover-when-style-change-is-async.html times out https://bugs.webkit.org/show_bug.cgi?id=193182 <rdar://problem/47452154>

Reviewed by Tim Horton.

Source/WebKit:

Fix an existing bug where blurring an element doesn't always un-suppress text interactions.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _elementDidBlur]):

Tools:

This test was timing out because one of its preceding tests (drag-to-autoscroll-in-single-line-editable.html)
long presses and drags to select text, but does not end the touch by lifting up; subsequently, the tap gesture
recognizer isn't fired when simulating a tap in hover-when-style-change-is-async.html.

To fix this, tweak the test runner to make it safe for tests to end while touching the web view without
preventing later tests from recognizing gestures.

* WebKitTestRunner/ios/TestControllerIOS.mm:
(WTR::TestController::platformResetStateToConsistentValues):

Cancel all touches in the UIApplication when resetting to a consistent state between tests.


Canonical link: https://commits.webkit.org/208250@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240352 268f45cc-cd09-0410-ab3c-d52691b4dbfc